samples/_failures_safe/1761076241_bc56bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0bc7395c.c: In function ‘print_token’:
./samples/SAFE/__tmp_0bc7395c.c:167:5: error: expected identifier or ‘(’ at end of input
  167 |     const
      |     ^~~~~
./samples/SAFE/__tmp_0bc7395c.c:167:5: error: expected declaration or statement at end of input
